force-app/main/default/objects/Opportunity/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <description>The ID from the back-end order management system</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the ID from the back-end order management system</inlineHelpText>
    <label>Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>