force-app/main/default/objects/Opportunity/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <description>The Order Status from the back-end order management system</description>
    <inlineHelpText>This is the Order Status from the back-end order management system</inlineHelpText>
    <label>Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>