force-app/main/default/objects/Opportunity/fields/OrderTotal__c.field-meta.xml
<CustomField>
    <fullName>OrderTotal__c</fullName>
    <description>The Order Total from the back-end order management system</description>
    <inlineHelpText>This is the Order Total from the back-end order management system</inlineHelpText>
    <label>Order Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>