force-app/main/default/objects/Opportunity/fields/SFDC_vs_OMS__c.field-meta.xml
<CustomField>
    <fullName>SFDC_vs_OMS__c</fullName>
    <description>Shows the difference between the two systems</description>
    <formula>Amount - OrderTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between Salesforce and our backend OMS system</inlineHelpText>
    <label>SFDC vs OMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>